# pe-orgair-casestudy1

./: .env.example  .env.local  README.md  pyproject.toml
migrations/versions/: 002_focus_group_schema.sql  002d_organization_schema.sql  002e_sector_attributes.sql  003_seed_focus_groups_and_dimensions.sql  004_seed_dimension_weights.sql  005_seed_calibrations.sql
scripts/: test_sector_config.py  test_settings.py  validate_cache_behavior.py  validate_dimension_weights.py  validate_negative_paths.py  validate_operational.py  validate_production.py  validate_sector_contract.py
src/pe_orgair/api/: main.py
src/pe_orgair/api/routes/: health.py
src/pe_orgair/api/routes/v1/: __init__.py  items.py  sector_config.py
src/pe_orgair/api/routes/v2/: __init__.py
src/pe_orgair/config/: settings.py
src/pe_orgair/db/: snowflake.py
src/pe_orgair/infrastructure/: cache.py
src/pe_orgair/observability/: setup.py
src/pe_orgair/schemas/: greet.py  items.py  sector_config.py
src/pe_orgair/services/: sector_config.py
