[project]
name = "pe-orgair-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "vaishrao2601",email = "srinivas.vai@northeastern.edu"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "snowflake-connector-python (>=4.2.0,<5.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "boto3 (>=1.42.30,<2.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "sse-starlette (>=3.1.2,<4.0.0)",
    "websockets (>=16.0,<17.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "pe_orgair_platform", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "hypothesis (>=6.150.2,<7.0.0)"
]
